--- a/style.css
+++ b/style.css
@@ -1012,3 +1012,31 @@ header .controls{
   border-radius: 2px;
   border: 1px solid var(--border);
 }
+
+#wildfire-overlay {
+  width: 300px;
+  height: 300px;
+  position: relative;
+  z-index: 500;
+}
+.wildfire-map-layer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+#wildfire-canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+#wildfire-legend {
+  margin-top: 10px;
+  margin-bottom:8px;
+  font-size: 12px;
+}
